--- a/src/app/components/prescription/prescription.component.html
+++ b/src/app/components/prescription/prescription.component.html
@@ -50,7 +50,9 @@
                     </div>
                 </div>
                 <br>
-                <button type="submit" class=" btn bg-primary  ms-3  col-3 text-light">Submit</button>
+                <button type="button" class="btn btn-primary ms-3 col-3 text-light" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                  Submit
+                </button>
             </div>
             <div class="col-6 row">
 
@@ -130,4 +132,25 @@
             </tr>
         </tbody>
     </table>
+</div>
+<!-- Button trigger modal -->
+
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                Do you want to save it?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Save</button>
+            </div>
+        </div>
+    </div>
 </div>
