--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -44,12 +44,14 @@
     <div class="Container">
         <div class="row">
             <div class="col-3">
-                <p><a routerLink=""><img class="logo " src="assets/images/logo.png"></a></p>
+                <p>
+                    <a routerLink=""><img class="logo " src="assets/images/logo.png"></a>
+                </p>
             </div>
             <div class="col-4">
                 <h5>Heathy Care - Heathy to day - Faith tomorrow</h5>
                 <p><i class="fa-solid fa-location-dot"></i> No.8 Ton That Thuyet Street,My Dinh Ward,Cau Giay Distric,Ha Noi</p>
-                <p><i class="bi bi-browser-chrome"></i>  http//Heathycare.vn</p>
+                <p><i class="bi bi-browser-chrome"></i> http//Heathycare.vn</p>
                 <p><i class="fa-solid fa-circle-envelope"></i> Heathycare@gmail.com</p>
                 <p><i class="fa-solid fa-circle-phone"></i> 0123456789</p>
             </div>
@@ -58,19 +60,17 @@
                 <p><a routerLink="">Frequently Asked Questions</a></p>
                 <p><a routerLink="">Terms of service</a></p>
                 <p><a routerLink="">Privacy Polic</a></p>
-                <p><a routerLink="">Terms of use</a></p>    
+                <p><a routerLink="">Terms of use</a></p>
             </div>
             <div class="col-3 p-0">
                 <div class="img-footer-content">
                     <div>
                         <p><img class="btn-top" src="https://salavietnam.vn/dataimages/images/20150827110756-dadangky.png"></p>
-                        <p><img class="btn" src="https://medpro.vn/static/media/googleplay.142f41c8.svg" alt=""></p>
                     </div>
                     <div>
                         <p><img class="btn-top" src="https://medpro.vn/static/media/bocongthuong2.d032db55.svg" alt=""></p>
-                        <p><img class="btn" src="https://medpro.vn/static/media/appstore.cdb12f48.svg" alt=""></p>
                     </div>
-                </div>   
+                </div>
             </div>
         </div>
         <div class="copyright">
