--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -2,17 +2,14 @@
 //     overflow-x: hidden !important;
 //     width: 100% !important;
 // }
-
 // .footer-basic {
 //     background: #eee;
 //     font-size: 15px;
 // }
-
 // .logo {
 //     width: auto;
 //     height: 70px;
 // }
-
 // .first {
 //     line-height: 2;
 //     .bct {
@@ -20,7 +17,6 @@
 //         height: auto;
 //     }
 // }
-
 // .center {
 //     line-height: 1.5;
 //     font-size: 20px;
@@ -30,13 +26,11 @@
 //         color: #3498db;
 //     }
 // }
-
 // .last {
 //     padding-left: 0;
 //     line-height: 2;
 //     font-size: 18px;
 // }
-
 // .social-network {
 //     padding: 10px 0 0 40px;
 //     a {
@@ -46,7 +40,6 @@
 //         }
 //     }
 // }
-
 // .copyright {
 //     text-align: center;
 //     height: 60px;
@@ -54,42 +47,43 @@
 //     opacity: 0.5;
 //     width: 100vw;
 // }
-
-
-
 // .footer-basic {
 //     background: #eee;
 //     // font-size: 15px;
 // }
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css");
-.footer-basic{
-    background-color: #F8FAFD;
+.footer-basic {
+    background-color: #f8fafd;
     line-height: 15px;
     padding-top: 20px;
-    width: 100vw!important;
-    .logo{
+    width: 100vw !important;
+    .logo {
         width: auto;
         height: 90px;
         float: right;
         margin-top: 10px;
     }
-    h5{
+    h5 {
         color: blue;
     }
-    .btn{
+    .btn {
         width: auto;
         height: 50px;
     }
-    .btn-top{
+    .btn-top {
         width: auto;
         height: 50px;
         margin-left: 3px;
     }
-    .img-footer-content{
-        display: flex;
+    .img-footer-content {
+        img {
+            width: 135px;
+            height: 50px;
+        }
     }
 }
-.copyright{
+
+.copyright {
     background-color: rgb(75, 75, 245);
     text-align: center;
     height: 20px;
