--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -63,22 +63,22 @@
             <div class="userLogin d-flex align-items-center">
                 <span class=" pr-2 text-light" data-bs-toggle="offcanvas" data-bs-target="#login"><b>Login</b></span>
                 <div class="vertical-line "></div>
-                <span class=" pr-2 text-light" data-bs-toggle="offcanvas" data-bs-target="#login"><b>Register</b></span>
+                <span class=" pl-2 text-light" data-bs-toggle="offcanvas" data-bs-target="#register"><b>Register</b></span>
             </div>
         </div>
     </div>
 </header>
 
-<div class="offcanvas offcanvas-top header-opt " id="specialist ">
+<div class="offcanvas offcanvas-top header-opt " id="specialist">
     <div class="offcanvas-header ">
         <div class="d-flex align-items-center ">
-            <button type="button " class="btn back " data-bs-dismiss="offcanvas "><i class="fa-solid fa-left "></i></button>
+            <button type="button " class="btn back " data-bs-dismiss="offcanvas"><i class="fa-solid fa-left "></i></button>
             <h3 class="px-3 ">Medical specialist</h3>
         </div>
     </div>
     <div class="offcanvas-body row ">
         <div class="col-12 px-5 " *ngFor="let item of header.specialist ">
-            <a href=" " class="row p-3 " style="border-top: 1px solid black ">
+            <a routerLink="/specialist-detail" class="row p-3 " style="border-top: 1px solid black ">
                 <img data-src="{{item.image}} " class="col-lg-3 col-md-12 col-12 ">
                 <div class="col-lg-9 col-md-12 col-12 ">
                     <h3>{{item.title}}</h3>
@@ -90,10 +90,10 @@
     </div>
 </div>
 
-<div class="offcanvas offcanvas-top header-opt " id="facilities ">
+<div class="offcanvas offcanvas-top header-opt " id="facilities">
     <div class="offcanvas-header ">
         <div class="d-flex align-items-center ">
-            <button type="button " class="btn back " data-bs-dismiss="offcanvas "><i class="fa-solid fa-left "></i></button>
+            <button type="button " class="btn back " data-bs-dismiss="offcanvas"><i class="fa-solid fa-left "></i></button>
             <h3 class="px-3 ">Health facilities</h3>
         </div>
     </div>
@@ -113,10 +113,10 @@
     </div>
 </div>
 
-<div class="offcanvas offcanvas-top header-opt " id="doctors ">
+<div class="offcanvas offcanvas-top header-opt " id="doctors">
     <div class="offcanvas-header ">
         <div class="d-flex align-items-center ">
-            <button type="button " class="btn back " data-bs-dismiss="offcanvas "><i class="fa-solid fa-left "></i></button>
+            <button type="button " class="btn back " data-bs-dismiss="offcanvas"><i class="fa-solid fa-left "></i></button>
             <h3 class="px-3 ">Doctor</h3>
         </div>
     </div>
@@ -162,6 +162,64 @@
                 </div>
                 <div class="col-12">
                     <h5 class="text-center"> Or Login with: </h5>
+                </div>
+                <div class="col-12 social-login">
+                    <a routerLink="">
+                        <i class="fa-brands fa-facebook"></i>
+                    </a>
+                    <a routerLink="">
+                        <i class="fa-brands fa-google-plus"></i>
+                    </a>
+                    <a routerLink="">
+                        <i class="fa-brands fa-twitter"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="offcanvas offcanvas-end" id="register">
+    <div class="login-background d-flex align-items-center" style="padding-top: 70px;">
+        <div class="login-container mx-3">
+            <div class="login-content row p-5">
+                <div class="col-12 text-center mb-3">
+                    <h1 class="text-light"> <b>Register</b> </h1>
+                </div>
+                <div class="col-12 form-group login-input">
+                    <label htmlFor=""> Username </label>
+                    <input type="text" class="form-control" placeholder="Enter your Username" />
+                </div>
+                <div class="col-12 form-group login-input">
+                    <label htmlFor=""> Password </label>
+                    <input type="password" class="form-control" placeholder="Enter your password" />
+                </div>
+                <div class="col-12 form-group login-input">
+                    <label htmlFor=""> Re-enter password </label>
+                    <input type="password" class="form-control" placeholder="Re-enter your password" />
+                </div>
+                <div class="col-12 form-group login-input">
+                    <label htmlFor=""> Email </label>
+                    <input type="email" class="form-control" placeholder="Enter your email" />
+                </div>
+                <div class="col-12 form-group login-input">
+                    <label htmlFor=""> Phone number </label>
+                    <input type="tel" class="form-control" placeholder="Enter your phone number" />
+                </div>
+                <div class="col-12 form-group login-input">
+                    <label htmlFor=""> Birth date </label>
+                    <input type="date" class="form-control">
+                </div>
+                <div class="col-12 login-input">
+                    <button class="btn btn-primary d-flex justify-content-center align-items-center">
+                  Register
+                </button>
+                </div>
+                <div class="col-12 login-input forgot-password">
+                    <a routerLink=""> Forgot your password ? </a>
+                </div>
+                <div class="col-12">
+                    <h5 class="text-center"> Or register with: </h5>
                 </div>
                 <div class="col-12 social-login">
                     <a routerLink="">
