--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -9,7 +9,7 @@ a {
 }
 
 .home-header-banner {
-    background-image: url("../../../assets/images/cover1.jpg");
+    background-image: url("https://images.unsplash.com/photo-1551076805-e1869033e561?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1632&q=80");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
