--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <app-header></app-header>
-<router-outlet (activate)="onActivate($event)"></router-outlet>
+
+<body>
+    <router-outlet (activate)="onActivate($event)"></router-outlet>
+</body>
 <app-footer></app-footer>
 <app-pop-up-chat></app-pop-up-chat>
