--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -57,7 +57,7 @@
             </div>
             <div class="col-2">
                 <p><a routerLink="/contact">Contact</a></p>
-                <p><a routerLink="">Frequently Asked Questions</a></p>
+                <p><a routerLink="/question">Frequently Asked Questions</a></p>
                 <p><a routerLink="">Terms of service</a></p>
                 <p><a routerLink="">Privacy Polic</a></p>
                 <p><a routerLink="">Terms of use</a></p>
