--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,68 +1,26 @@
-<!-- <footer class="footer-basic">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-4 col-md-6 col-12 p-3 first">
-                <p>
-                    <a routerLink=""><img class="logo" src="assets/images/logo.png"></a>
-                </p>
-                <b style="font-size: 25px;">FPT Academy Intenaltional</b>
-                <p><i class="fa-solid fa-location-dot"></i> Số 8 Tôn Thất Thuyết, Mỹ Đình, TP.HN.</p>
-                <p><i class="fa-solid fa-check"></i> Business registration number: 0106790291. Hanoi Department of Planning and Investment issued on March 16, 2015</p>
-                <a routerLink=""><span><img class="bct"
-                            src="https://salavietnam.vn/dataimages/images/20150827110756-dadangky.png"></span></a>
-
-            </div>
-
-            <div class="col-lg-4 col-md-6 col-12 p-3 center">
-                <p><a routerLink='/contact'>Contact for cooperation</a></p>
-                <p><a routerLink="#">Recruit</a></p>
-                <p><a routerLink="/question">Frequently asked questions</a></p>
-                <p><a routerLink="#">Terms of use</a></p>
-                <p><a routerLink="#">Privacy Policy</a></p>
-                <p><a routerLink="#">Complaint handling support process</a></p>
-                <p><a routerLink="#">Operational Regulations</a></p>
-            </div>
-            <div class="col-lg-4 col-md-6 col-12 p-3 last">
-                <b>Headquarters in Hanoi</b>
-                <p>Số 8 Tôn Thất Thuyết, Mỹ Đình, TP.HN.</p>
-                <b>Customer Support</b>
-                <p>support@techwiz3.vn (7h - 18h)</p>
-                <div class="social-network">
-                    <a routerLink="#"><i class="fa-brands fa-facebook"></i></a>
-                    <a routerLink="#"><i class="fa-brands fa-twitter"></i></a>
-                    <a routerLink="#"><i style="color:red" class="fa-brands fa-google-plus"></i></a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="copyright row f-flex justify-content-center bg-dark text-light align-items-center ">
-        <span class="company ">Cuộc sống cô đơn © 2022</span>
-    </div>
-</footer> -->
-
 <footer class="footer-basic">
-    <div class="Container">
-        <div class="row">
-            <div class="col-3">
+    <div class="container">
+        <div class="row d-flex justify-content-center align-items-center">
+            <div class="col-lg-3 col-md-12 col-12 py-3">
                 <p>
                     <a routerLink=""><img class="logo " src="assets/images/logo.png"></a>
                 </p>
             </div>
-            <div class="col-4">
+            <div class="col-lg-5 col-md-12 col-12 py-3">
                 <h5>Heathy Care - Heathy to day - Faith tomorrow</h5>
                 <p><i class="fa-solid fa-location-dot"></i> No.8 Ton That Thuyet Street,My Dinh Ward,Cau Giay Distric,Ha Noi</p>
                 <p><i class="bi bi-browser-chrome"></i> http//Heathycare.vn</p>
                 <p><i class="fa-solid fa-circle-envelope"></i> Heathycare@gmail.com</p>
                 <p><i class="fa-solid fa-circle-phone"></i> 0123456789</p>
             </div>
-            <div class="col-2">
+            <div class="col-lg-2 col-md-6 col-12 py-3">
                 <p><a routerLink="/contact">Contact</a></p>
                 <p><a routerLink="/question">Frequently Asked Questions</a></p>
                 <p><a routerLink="">Terms of service</a></p>
-                <p><a routerLink="">Privacy Polic</a></p>
+                <p><a routerLink="">Privacy Police</a></p>
                 <p><a routerLink="">Terms of use</a></p>
             </div>
-            <div class="col-3 p-0">
+            <div class="col-lg-2 col-md-6 col-12 py-3">
                 <div class="img-footer-content">
                     <div>
                         <p><img class="btn-top" src="https://salavietnam.vn/dataimages/images/20150827110756-dadangky.png"></p>
@@ -73,8 +31,8 @@
                 </div>
             </div>
         </div>
-        <div class="copyright d-flex align-items-center justify-content-center py-4">
-            <b>Cuộc sống cô đơn © 2022</b>
-        </div>
+    </div>
+    <div class="copyright d-flex align-items-center justify-content-center py-4">
+        <b>Cuộc sống cô đơn © 2022</b>
     </div>
 </footer>
