--- a/src/app/components/bmi/bmi.component.html
+++ b/src/app/components/bmi/bmi.component.html
@@ -1,7 +1,7 @@
 <div class="container">
-    <img src="https://benhvienvanhanh.com/wp-content/uploads/2022/01/20190515_023832_291922_chi-so-BMI-gay-beo.max-1800x1800-1.jpg" alt="">
+    <img style="max-width: 100%;" src="https://benhvienvanhanh.com/wp-content/uploads/2022/01/20190515_023832_291922_chi-so-BMI-gay-beo.max-1800x1800-1.jpg" alt="">
     <div class="row">
-        <div class="col-6">
+        <div class="col-xl-6 col-md-6">
             <label for="cannang"><span class="fw-bold">Your weight</span> <span class=" ms-1">(Kg)</span></label>
             <input class=" input-group-text w-100 p-1 mb-3" type="text" [(ngModel)]="cann" pattern="\d*" #cn maxlength="3" #kg placeholder="Enter your weight">
             <p style="color:Red" *ngIf="info.cn">Please enter your weight</p>
@@ -9,19 +9,20 @@
             <input class="input-group-text w-100 p-1 mb-3" [(ngModel)]="chieuc" type="text" pattern="\d*" #cc maxlength="3" #kg placeholder="Enter your height">
             <p style="color:Red" *ngIf="info.cc">Please enter your height</p>
         </div>
-        <div class="col-6">
+        <div class="col-xl-6 col-md-6">
             <h1 class=" text-center">Test results</h1>
             <div *ngIf="kqBMI!==undefined">
                 <p *ngIf="bmi" class=" fs-3 text-center">Your BMI: <span class="fw-bold" [style.color]="textColor">{{kqBMI|number}}</span></p>
-                <div class="col text-center">
+                <div class="col-xl text-center">
                     <span class=" text-center" [style.color]="textColor" style="font-size: 30px;font-weight: 500;">{{bmi}}</span>
                 </div>
             </div>
         </div>
     </div>
     <br>
-    <div class="col-6 d-flex justify-content-center">
+    <div class="col-xl-6 col-xl-6 d-flex justify-content-center">
         <button type="button" class="btn bg-primary text-light col-6" #kq (click)="ketqua()">View Result</button>
     </div>
 </div>
+
 <br><br>
