--- a/src/app/components/nerve/nerve.component.html
+++ b/src/app/components/nerve/nerve.component.html
@@ -51,7 +51,7 @@
                         </div>
                         <div class="row border-bottom pb-2 mb-2 gy-1">
                             <b><i class="fa-regular fa-calendar"></i> EXAMINATION SCHEDULES</b>
-                            <button type="button" class="btn btn-light col-auto mr-1" *ngFor="let t of d.schedule[0].time"><b>{{t}}</b></button>
+                            <button type="button" class="btn btn-warning col-auto mr-1" *ngFor="let t of d.schedule[0].time"><b>{{t}}</b></button>
                             <div class="pt-1" style="font-weight: lighter">Choose <i class="fa-solid fa-hand-pointer"></i> and book (Scheduling fee 0 VND)</div>
                         </div>
                         <div class="row border-bottom pb-2 mb-2">
@@ -87,7 +87,7 @@
                         </div>
                         <div class="row border-bottom pb-2 mb-2 gy-1">
                             <b><i class="fa-regular fa-calendar"></i> EXAMINATION SCHEDULES</b>
-                            <button type="button" class="btn btn-light col-auto mr-1" *ngFor="let t of d.schedule[0].time"><b>{{t}}</b></button>
+                            <button type="button" class="btn btn-warning col-auto mr-1" *ngFor="let t of d.schedule[0].time"><b>{{t}}</b></button>
                             <div class="pt-1" style="font-weight: lighter">Choose <i class="fa-solid fa-hand-pointer"></i> and book (Scheduling fee 0 VND)</div>
                         </div>
                         <div class="row border-bottom pb-2 mb-2">
@@ -126,7 +126,7 @@
                         </div>
                         <div class="row border-bottom pb-2 mb-2 gy-1">
                             <b><i class="fa-regular fa-calendar"></i> EXAMINATION SCHEDULES</b>
-                            <button type="button" class="btn btn-light col-auto mr-1" *ngFor="let t of d.schedule[0].time"><b>{{t}}</b></button>
+                            <button type="button" class="btn btn-warning col-auto mr-1" *ngFor="let t of d.schedule[0].time"><b>{{t}}</b></button>
                             <div class="pt-1" style="font-weight: lighter">Choose <i class="fa-solid fa-hand-pointer"></i> and book (Scheduling fee 0 VND)</div>
                         </div>
                         <div class="row border-bottom pb-2 mb-2">
@@ -165,7 +165,7 @@
                         </div>
                         <div class="row border-bottom pb-2 mb-2 gy-1">
                             <b><i class="fa-regular fa-calendar"></i> EXAMINATION SCHEDULES</b>
-                            <button type="button" class="btn btn-light col-auto mr-1" *ngFor="let t of d.schedule[0].time"><b>{{t}}</b></button>
+                            <button type="button" class="btn btn-warning col-auto mr-1" *ngFor="let t of d.schedule[0].time"><b>{{t}}</b></button>
                             <div class="pt-1" style="font-weight: lighter">Choose <i class="fa-solid fa-hand-pointer"></i> and book (Scheduling fee 0 VND)</div>
                         </div>
                         <div class="row border-bottom pb-2 mb-2">
