--- a/src/app/components/prescription/prescription.component.html
+++ b/src/app/components/prescription/prescription.component.html
@@ -4,7 +4,7 @@
             <div class="col-xl-6 col-md-5">
                 <div class="col mb-2">
                     <label for="" class="form-label">Patient Name</label>
-                    <input id="startDate" required class="form-control" #fullname="ngModel" name="fullname" [(ngModel)]="forminput.fullname" type="text" placeholder="Họ và Tên người sử dụng" />
+                    <input id="startDate" required class="form-control" #fullname="ngModel" name="fullname" [(ngModel)]="forminput.fullname" type="text" placeholder="Enter Patient Name" />
                     <span *ngIf="fullname.invalid" style="color:red">Please enter Your Fullname</span>
                 </div>
 
@@ -77,7 +77,7 @@
                     <div class="row">
                         <div class="col-xl-12  mb-2">
                             <label for="" class="form-label">Medicine name</label>
-                            <input required class="form-control" type="text" placeholder="Nhập tên thuốc" (click)="mdcName()" #medicine [value]="medicineName1">
+                            <input required class="form-control" type="text" placeholder="Enter Medicine name" (click)="mdcName()" #medicine [value]="medicineName1">
                             <div *ngIf="show">
                                 <ul class="medicineName">
                                     <li class="mdcName" type="botton" *ngFor="let i of medicineName" (click)="mdcNamePick(i.name)">{{i.name}}</li>
