--- a/src/app/components/book-an-apointment/book-an-apointment.component.html
+++ b/src/app/components/book-an-apointment/book-an-apointment.component.html
@@ -77,7 +77,7 @@
             value="0"
             dl-luu="gender"
           />
-          Nam </label
+          Male </label
         ><label style="margin-left: 15px"
           ><input
             class="press"
@@ -86,7 +86,7 @@
             value="1"
             dl-luu="gender"
           />
-          Nữ
+          Female
         </label>
             <div class="dauvao-thongbao"></div>
         </div>
