--- a/src/app/components/medications/medications.component.html
+++ b/src/app/components/medications/medications.component.html
@@ -5,9 +5,12 @@
             <hr>
             <p class="content">We all know that every family should have a spare medicine cabinet for necessary health-related cases, but not everyone knows what to prepare for adequate and appropriate. CarePlus will help you with the medicines and medical supplies you
                 need in your medicine cabinet!</p>
-            <p><img src="../../../assets/images/thuoc.jpg" width="700px"></p>
+            <p class="img-one"><img src="../../../assets/images/thuoc.jpg"></p>
             <p class="clock"><i class="fa-solid fa-clock"></i> 22/10/2020 9:11:32 SA</p>
-
+            <div class=" col-7">
+                <button class="datlich">Make an appointment to see a doctor</button>
+            </div>
+            <br><br><br><br><br><br>
             <h4><b>MEDICATIONS NEEDED</b></h4>
             <div class="noidung" *ngFor="let a of home.need">
                 <h5><b>{{a.title}}</b></h5>
@@ -28,7 +31,7 @@
                 paediatrics, paediatrics and cardiology). , Obstetrics and Gynecology, Otolaryngology, Dermatology, ...).
                 <span><b>Register</b><a routerLink=""> HERE</a></span>
             </p>
-            <iframe width="650" height="315" src="https://www.youtube.com/embed/OSfuXv7CYoU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe style="max-width: 100%;" width="650" height="315" src="https://www.youtube.com/embed/OSfuXv7CYoU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <div class="share">
                 <p>Please share with us</p>
                 <i class="fa-brands fa-youtube"></i>
